--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=movies
+
+spring.datasource.url=jdbc:mysql://localhost:3306/movies_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Agl31290975!
+
+server.port=8080
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-message=Always
